--- a/quantum-sat/SAT.bib
+++ b/quantum-sat/SAT.bib
@@ -2,7 +2,7 @@
 @inproceedings{Alo05,
   title = {On {{Solving Optimization Problems Using Boolean Satisfiability}}},
   booktitle = {Proceeding of the {{First International Conference}} on {{Modeling}}, {{Simulation}} and {{Applied Optimization}}},
-  author = {Aloul, Fadi A.},
+  author = {Aloul, F.},
   year = {2005},
   month = feb,
   address = {{Sharjah, U.A.E.}},
@@ -13,7 +13,7 @@
 
 @article{Amb05,
   title = {Quantum Search Algorithms},
-  author = {Ambainis, Andris},
+  author = {Ambainis, A.},
   year = {2005},
   month = apr,
   journal = {arXiv:quant-ph/0504012},
@@ -28,7 +28,7 @@
 @incollection{AS96,
   title = {Normal {{Order}} and {{Applicative Order}}},
   booktitle = {Structure and {{Interpretation}} of {{Computer Programs}}},
-  author = {Abelson, Harold and Sussman, Gerald Jay},
+  author = {Abelson, H. and Sussman, G. J.},
   year = {1996},
   month = jul,
   pages = {Sec 4.2.1, p.542-544},
@@ -44,8 +44,8 @@
 @inproceedings{BCCZ99,
   title = {Symbolic {{Model Checking}} without {{BDDs}}},
   booktitle = {Tools and {{Algorithms}} for the {{Construction}} and {{Analysis}} of {{Systems}}},
-  author = {Biere, Armin and Cimatti, Alessandro and Clarke, Edmund and Zhu, Yunshan},
-  editor = {Cleaveland, W. Rance},
+  author = {Biere, A. and Cimatti, A. and Clarke, E. and Zhu, Y.},
+  editor = {Cleaveland, W.R.},
   year = {1999},
   series = {Lecture {{Notes}} in {{Computer Science}}},
   pages = {193--207},
@@ -62,7 +62,7 @@
 @article{BCM+20,
   title = {Solving {{SAT}} (and {{MaxSAT}}) with a Quantum Annealer: {{Foundations}}, Encodings, and Preliminary Results},
   shorttitle = {Solving {{SAT}} (and {{MaxSAT}}) with a Quantum Annealer},
-  author = {Bian, Zhengbing and Chudak, Fabian and Macready, William and Roy, Aidan and Sebastiani, Roberto and Varotti, Stefano},
+  author = {Bian, Z. and Chudak, F. and Macready, W. and Roy, A. and Sebastiani, R. and Varotti, S.},
   year = {2020},
   month = dec,
   journal = {Information and Computation},
@@ -80,7 +80,7 @@
   title = {Why3: {{Shepherd Your Herd}} of {{Provers}}},
   shorttitle = {Why3},
   booktitle = {Boogie 2011: {{First International Workshop}} on {{Intermediate Verification Languages}}},
-  author = {Bobot, Fran{\c c}ois and Filli{\^a}tre, Jean-Christophe and March{\'e}, Claude and Paskevich, Andrei},
+  author = {Bobot, F. and Filli{\^a}tre, J.-C. and March{\'e}, C. and Paskevich, A.},
   year = {2011},
   pages = {53},
   doi = {10/document},
@@ -92,7 +92,7 @@
 @inproceedings{BGV99,
   title = {Microprocessor {{Verification Using Efficient Decision Procedures}} for a {{Logic}} of {{Equality}} with {{Uninterpreted Functions}}},
   booktitle = {Automated {{Reasoning}} with {{Analytic Tableaux}} and {{Related Methods}}},
-  author = {Bryant, Randal E. and German, Steven and Velev, Miroslav N.},
+  author = {Bryant, Randal E. and German, S. and Velev, Miroslav N.},
   editor = {Murray, Neil V.},
   year = {1999},
   series = {Lecture {{Notes}} in {{Computer Science}}},
@@ -109,7 +109,7 @@
 
 @article{CGW00,
   title = {Nested {{Quantum Search}} and {{NP-Hard Problems}}},
-  author = {Cerf, Nicolas J. and Grover, Lov K. and Williams, Colin P.},
+  author = {Cerf, N. J. and Grover, Lov K. and Williams, Colin P.},
   year = {2000},
   month = may,
   journal = {Applicable Algebra in Engineering, Communication and Computing},
@@ -126,7 +126,7 @@
 @inproceedings{Coo71,
   title = {The Complexity of Theorem-Proving Procedures},
   booktitle = {Proceedings of the Third Annual {{ACM}} Symposium on {{Theory}} of Computing},
-  author = {Cook, Stephen A.},
+  author = {Cook, S. A.},
   year = {1971},
   month = may,
   series = {{{STOC}} '71},
@@ -141,7 +141,7 @@
 
 @article{dKM21,
   title = {Tensor {{Network Rewriting Strategies}} for {{Satisfiability}} and {{Counting}}},
-  author = {{de Beaudrap}, Niel and Kissinger, Aleks and Meichanetzidis, Konstantinos},
+  author = {{de Beaudrap}, N. and Kissinger, A. and Meichanetzidis, K.},
   year = {2021},
   month = sep,
   journal = {Electronic Proceedings in Theoretical Computer Science},
@@ -159,7 +159,7 @@
 
 @article{DLL62,
   title = {A Machine Program for Theorem-Proving},
-  author = {Davis, Martin and Logemann, George and Loveland, Donald},
+  author = {Davis, M. and Logemann, G. and Loveland, D.},
   year = {1962},
   month = jul,
   journal = {Communications of the ACM},
@@ -173,10 +173,23 @@
   file = {C\:\\Users\\disc\\Zotero\\storage\\ZIQVEVCX\\Davis et al. - 1962 - A machine program for theorem-proving.pdf}
 }
 
+@inproceedings{ESE15,
+  title = {On the Parallelization of {{SAT}} Solvers},
+  booktitle = {2015 {{Tenth International Conference}} on {{Computer Engineering Systems}} ({{ICCES}})},
+  author = {El Khalek, Y. A. and Safar, M. and {El-Kharashi}, M. W.},
+  year = {2015},
+  month = dec,
+  pages = {119--128},
+  doi = {10.1109/ICCES.2015.7393031},
+  abstract = {This paper presents the main challenges, the hot topics, and the intriguing issues in the area of parallel SAT solving which provides possible directions for future research. It gives a detailed summary for the main features and technologies used in the most widely known and successful parallel SAT solvers and shows the strong points and the shortcomings in them. In addition, it compares between the basic characteristics for these solvers including algorithms, architecture paradigm, scalability, network communication, managing the workload distribution and more. Finally, a new approach is proposed that is expected to be a very promising direction as it copes with the nature of parallel paradigm and results in almost a linear speedup in solving SAT instances, independent of the number of variables of the SAT formula.},
+  keywords = {Algorithm design and analysis,architecture paradigm,Boolean Satisfiability SAT,computability,Computer architecture,Computers,Master-slave,network communication,parallel processing,Parallel processing,Parallelism,Partitioning algorithms,Program processors,SAT solver parallelization,satisfiability,scalability,workload distribution},
+  file = {C\:\\Users\\disc\\Zotero\\storage\\LEZRGKKB\\Khalek et al. - 2015 - On the parallelization of SAT solvers.pdf}
+}
+
 @inproceedings{Gro96,
   title = {A {{Fast Quantum Mechanical Algorithm}} for {{Database Search}}},
   booktitle = {Proceedings of the {{Twenty-eighth Annual ACM Symposium}} on {{Theory}} of {{Computing}}},
-  author = {Grover, Lov K.},
+  author = {Grover, L. K.},
   year = {1996},
   month = may,
   series = {{{STOC}} '96},
@@ -191,7 +204,7 @@
 
 @article{GZ17,
   title = {A Survey of {{SAT}} Solver},
-  author = {Gong, Weiwei and Zhou, Xu},
+  author = {Gong, W. and Zhou, X.},
   year = {2017},
   month = jun,
   journal = {AIP Conference Proceedings},
@@ -206,7 +219,7 @@
 
 @misc{Hin18,
   title = {Genomics {{Code Exceeds Exaops}} on {{Summit Supercomputer}}},
-  author = {Hines, Jonathan},
+  author = {Hines, J.},
   year = {2018},
   month = jun,
   journal = {Oak Ridge Leadership Computing Facility},
@@ -218,7 +231,7 @@
 @inproceedings{HMN+11,
   title = {A Short Overview on Modern Parallel {{SAT-solvers}}},
   booktitle = {2011 {{International Conference}} on {{Advanced Computer Science}} and {{Information Systems}}},
-  author = {H{\"o}lldobler, Steffen and Manthey, Norbert and Nguyen, Van Hau and Stecklina, Julian and Steinke, Peter},
+  author = {H{\"o}lldobler, S. and Manthey, N. and Nguyen, V. H. and Stecklina, J. and Steinke, P.},
   year = {2011},
   month = dec,
   pages = {201--206},
@@ -229,28 +242,15 @@
 
 @techreport{Jor21,
   title = {Quantum {{Algorithm Zoo}}},
-  author = {Jordan, Stephen},
+  author = {Jordan, S.},
   year = {2021},
   month = feb
-}
-
-@inproceedings{KSE15,
-  title = {On the Parallelization of {{SAT}} Solvers},
-  booktitle = {2015 {{Tenth International Conference}} on {{Computer Engineering Systems}} ({{ICCES}})},
-  author = {Khalek, Y. A. El and Safar, M. and {El-Kharashi}, M. W.},
-  year = {2015},
-  month = dec,
-  pages = {119--128},
-  doi = {10.1109/ICCES.2015.7393031},
-  abstract = {This paper presents the main challenges, the hot topics, and the intriguing issues in the area of parallel SAT solving which provides possible directions for future research. It gives a detailed summary for the main features and technologies used in the most widely known and successful parallel SAT solvers and shows the strong points and the shortcomings in them. In addition, it compares between the basic characteristics for these solvers including algorithms, architecture paradigm, scalability, network communication, managing the workload distribution and more. Finally, a new approach is proposed that is expected to be a very promising direction as it copes with the nature of parallel paradigm and results in almost a linear speedup in solving SAT instances, independent of the number of variables of the SAT formula.},
-  keywords = {Algorithm design and analysis,architecture paradigm,Boolean Satisfiability SAT,computability,Computer architecture,Computers,Master-slave,network communication,parallel processing,Parallel processing,Parallelism,Partitioning algorithms,Program processors,SAT solver parallelization,satisfiability,scalability,workload distribution},
-  file = {C\:\\Users\\disc\\Zotero\\storage\\LEZRGKKB\\Khalek et al. - 2015 - On the parallelization of SAT solvers.pdf}
 }
 
 @inproceedings{LAK+14,
   title = {Symbolic Optimization with {{SMT}} Solvers},
   booktitle = {Proceedings of the 41st {{ACM SIGPLAN-SIGACT Symposium}} on {{Principles}} of {{Programming Languages}}},
-  author = {Li, Yi and Albarghouthi, Aws and Kincaid, Zachary and Gurfinkel, Arie and Chechik, Marsha},
+  author = {Li, Y. and Albarghouthi, A. and Kincaid, Z. and Gurfinkel, A. and Chechik, M.},
   year = {2014},
   month = jan,
   pages = {607--618},
@@ -265,7 +265,7 @@
 
 @article{NSR02,
   title = {A New {{FPGA}} Detailed Routing Approach via Search-Based {{Boolean}} Satisfiability},
-  author = {Nam, Gi-Joon and Sakallah, K.A. and Rutenbar, R.A.},
+  author = {Nam, G.-J. and Sakallah, K.A. and Rutenbar, R.A.},
   year = {2002},
   month = jun,
   journal = {IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
@@ -283,8 +283,8 @@
   title = {C-Sat: {{A Parallel SAT Solver}} for {{Clusters}}},
   shorttitle = {C-Sat},
   booktitle = {Theory and {{Applications}} of {{Satisfiability Testing}} - {{SAT}} 2009},
-  author = {Ohmura, Kei and Ueda, Kazunori},
-  editor = {Kullmann, Oliver},
+  author = {Ohmura, K. and Ueda, K.},
+  editor = {Kullmann, O.},
   year = {2009},
   series = {Lecture {{Notes}} in {{Computer Science}}},
   pages = {524--537},
@@ -329,7 +329,7 @@
 
 @patent{Sta94,
   title = {System for Determining Propositional Logic Theorems by Applying Values and Rules to Triplets That Are Generated from Boolean Formula},
-  author = {Stalmarck, Gunnar M. N.},
+  author = {Stalmarck, G.},
   year = {1994},
   month = jan,
   number = {US5276897A},
@@ -343,7 +343,7 @@
 @inproceedings{TID20,
   title = {A {{SAT-Based Approach}} for {{Index Calculus}} on {{Binary Elliptic Curves}}},
   booktitle = {Progress in {{Cryptology}} - {{AFRICACRYPT}} 2020},
-  author = {Trimoska, Monika and Ionica, Sorina and Dequen, Gilles},
+  author = {Trimoska, M. and Ionica, S. and Dequen, G.},
   year = {2020},
   month = jul,
   pages = {214--235},
@@ -356,7 +356,7 @@
 
 @article{VB03,
   title = {Effective Use of {{Boolean}} Satisfiability Procedures in the Formal Verification of Superscalar and {{VLIW}} Microprocessors},
-  author = {Velev, Miroslav N and Bryant, Randal E},
+  author = {Velev, M. and Bryant, R.},
   year = {2003},
   month = feb,
   journal = {Journal of Symbolic Computation},
@@ -373,7 +373,7 @@
 @inproceedings{ZMMM01,
   title = {Efficient Conflict Driven Learning in a {{Boolean}} Satisfiability Solver},
   booktitle = {{{IEEE}}/{{ACM International Conference}} on {{Computer Aided Design}}. {{ICCAD}} 2001. {{IEEE}}/{{ACM Digest}} of {{Technical Papers}} ({{Cat}}. {{No}}.{{01CH37281}})},
-  author = {Zhang, Lintao and Madigan, C.F. and Moskewicz, M.H. and Malik, S.},
+  author = {Zhang, L. and Madigan, C.F. and Moskewicz, M.H. and Malik, S.},
   year = {2001},
   pages = {279--285},
   publisher = {{IEEE}},
